syntax = "proto3";

//package pbs;
option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

//import "pb_enum.proto";

message ChangePhoneNumberParam {
}

message ChangePhoneNumberResponse {
    bool done =1;
    string text = 2;
}

service RPC_Account {
    //rpc Account (Param) returns (Response);

    // Phone, Email
    rpc ChangePhoneNumber (ChangePhoneNumberParam) returns (ChangePhoneNumberResponse);

    // Session
    rpc AccountRemoveSession (Param) returns (Response);
    rpc AccountRemoveOtherSessions (Param) returns (Response);
    rpc AccountGetActiveSessions (Param) returns (Response); // View

    // Settings

    //

}

