syntax = "proto3";

//package pbs;
option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

//import "enums.proto";
//import "views.proto";

message ChannelAvatarAddParam {
    uint32 channel_id = 1;
}

message ChannelAvatarAddResponse {}

message ChannelAvatarDeleteParam {
    uint32 channel_id = 1;
}

message ChannelAvatarDeleteResponse {}

message ChannelAvatarGetListParam {
    uint32 channel_id = 1;
}

message ChannelAvatarGetListResponse {}

message ChannelCreateParam {
    uint32 channel_id = 1;
}

message ChannelCreateResponse {

}

message ChannelEditParam {
    uint32 channel_id = 1;
}

message ChannelEditResponse {

}

message ChannelDeleteParam {
    uint32 channel_id = 1;
}

message ChannelDeleteResponse {

}

message ChannelSendMessageParam {
    uint32 channel_id = 1;
}

message ChannelSendMessageResponse {

}

message ChannelEditMessageParam {
    uint32 channel_id = 1;
}

message ChannelEditMessageResponse {

}

message ChannelPinMessageParam {
    uint32 channel_id = 1;
}

message ChannelPinMessageResponse {

}

message ChannelUnPinMessageParam {
    uint32 channel_id = 1;
}

message ChannelUnPinMessageResponse {

}

message ChannelDeleteMessageParam {
    uint32 channel_id = 1;
}

message ChannelDeleteMessageResponse {

}

message ChannelSetDraftParam {
    uint32 channel_id = 1;
}

message ChannelSetDraftResponse {

}

message ChannelChangePrivacyParam {
    uint32 channel_id = 1;
}

message ChannelChangePrivacyResponse {

}
message ChannelGetFullMessageParam {
    uint32 channel_id = 1;
}

message ChannelGetFullMessageResponse {

}

service RPC_Channel {
    rpc ChannelAvatarAdd (ChannelAvatarAddParam) returns (ChannelAvatarAddResponse);// todo Add or Change
    rpc ChannelAvatarDelete (ChannelAvatarDeleteParam) returns (ChannelAvatarDeleteResponse);
    rpc ChannelAvatarGetList (ChannelAvatarGetListParam) returns (ChannelAvatarGetListResponse);
    rpc ChannelCreate (ChannelCreateParam) returns (ChannelCreateResponse);
    rpc ChannelEdit (ChannelEditParam) returns (ChannelEditResponse);
    rpc ChannelDelete (ChannelDeleteParam) returns (ChannelDeleteResponse);
    rpc ChannelSendMessage (ChannelSendMessageParam) returns (ChannelSendMessageResponse);
    rpc ChannelEditMessage (ChannelEditMessageParam) returns (ChannelEditMessageResponse);
    rpc ChannelPinMessage (ChannelPinMessageParam) returns (ChannelPinMessageResponse);
    rpc ChannelUnPinMessage (ChannelUnPinMessageParam) returns (ChannelUnPinMessageResponse);
    rpc ChannelDeleteMessage (ChannelDeleteMessageParam) returns (ChannelDeleteMessageResponse);
    rpc ChannelSetDraft (ChannelSetDraftParam) returns (ChannelSetDraftResponse);

    rpc ChannelChangePrivacyDraft (ChannelChangePrivacyParam) returns (ChannelChangePrivacyResponse);

    rpc ChannelGetFull (ChannelGetFullMessageParam) returns (ChannelGetFullMessageResponse);


}




















